<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".care.SetddEditorActivity">

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputTitle"
        android:textColor="@color/grey_600"
        android:textSize="@dimen/text_sp6" />

    <EditText
        android:id="@+id/etItemValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_dp1"
        android:layout_marginTop="@dimen/text_dp1"
        android:hint="@string/inputItem"
        android:textSize="@dimen/text_sp3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doDelete"
            android:text="@string/delete"
            android:textSize="@dimen/text_sp5" />

        <Button
            android:id="@+id/btnEnable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doEnable"
            android:text="@string/enable"
            android:textSize="@dimen/text_sp5" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doModified"
            android:text="@string/ok"
            android:textSize="@dimen/text_sp5" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doAdd"
            android:text="@string/ok"
            android:textSize="@dimen/text_sp5" />

    </LinearLayout>
</LinearLayout>
