<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context=".care.AddDDActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/care_menu_height"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btnCare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:drawableLeft="@drawable/menu_drug_amber1_m"
            android:paddingLeft="@dimen/text_dp3"
            android:text="@string/care"
            android:textSize="@dimen/text_sp7"
            android:onClick="goCare"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:drawableRight="@drawable/delete_amber2_m"
            android:paddingRight="@dimen/text_dp3"
            android:text="@string/cancel"
            android:textSize="@dimen/text_sp7" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:drawableRight="@drawable/save_amber2_m"
            android:paddingRight="@dimen/text_dp1"
            android:text="@string/save"
            android:textSize="@dimen/text_sp7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnMember"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:drawableLeft="@drawable/user_find_amber1_s"
                android:text="@string/member"
                android:textSize="@dimen/text_sp4" />

            <Button
                android:id="@+id/btnMeal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:drawableLeft="@drawable/meal_amber1_s"
                android:text="@string/meal"
                android:textSize="@dimen/text_sp4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="10">

            <Button
                android:id="@+id/btnCycle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:drawableLeft="@drawable/calendar_amber31_s"
                android:text="@string/cycle"
                android:textSize="@dimen/text_sp4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:weightSum="10">

            <Button
                android:id="@+id/btnTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:drawableLeft="@drawable/clock_amber1_s"
                android:text="@string/clock"
                android:textSize="@dimen/text_sp4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnDrug"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:drawableLeft="@drawable/menu_drug_amber1_s"
                android:text="@string/drug"
                android:textSize="@dimen/text_sp4" />

            <ImageButton
                android:id="@+id/ibnCamera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/camera_amber1_m" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
