<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context=".care.CareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/care_menu_height"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btnCare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:drawableLeft="@drawable/menu_drug_amber1_m"
            android:onClick="goCare"
            android:paddingLeft="@dimen/text_dp3"
            android:text="@string/care"
            android:textSize="@dimen/text_sp7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:weightSum="7.5">

        <Button
            android:id="@+id/btnSetDrug"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:drawableLeft="@drawable/idea_amber1_b"
            android:paddingLeft="@dimen/text_dp2"
            android:text="@string/setDrug"
            android:textSize="@dimen/text_sp4" />

        <Button
            android:id="@+id/btnSetMem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:drawableLeft="@drawable/user_edit_amber1_b"
            android:paddingLeft="@dimen/text_dp2"
            android:text="@string/setMember"
            android:textSize="@dimen/text_sp4"/>

        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:drawableLeft="@drawable/clock_amber1_b"
            android:paddingLeft="@dimen/text_dp2"
            android:text="@string/setTime"
            android:textSize="@dimen/text_sp4" />


    </LinearLayout>

</LinearLayout>
