<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="10"
              tools:context=".care.AddDDActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/care_menu_height"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btnCare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:drawableLeft="@drawable/menu_drug_amber1_m"
            android:paddingLeft="@dimen/text_dp3"
            android:text="@string/care"
            android:textSize="@dimen/text_sp7"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:drawableRight="@drawable/add_amber2_m"
            android:paddingRight="@dimen/text_dp3"
            android:text="@string/add"
            android:textSize="@dimen/text_sp7"/>

        <Button
            android:id="@+id/btnFind"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:drawableRight="@drawable/find_amber1_m"
            android:onClick="find"
            android:paddingRight="@dimen/text_dp1"
            android:text="@string/find"
            android:textSize="@dimen/text_sp7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:weightSum="10">

        <ListView
            android:id="@+id/lvDD"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

        </ListView>
    </LinearLayout>

</LinearLayout>
